# reconocedor-lse

./: .gitignore  ARQUITECTURA.md  BRIEF-DISENO.md  BRIEF-INICIO.md  MEMORIA.md  PLAN.md  README.md  calibracion.json  pyproject.toml  vocabulario.json
.github/workflows/: deploy.yml
evaluacion/: comparacion-modelos.md  ficha-del-modelo.md  informe-evaluacion.md  informe.html
notebooks/: preentrenar_gpu.ipynb
src/: analizar_errores.py  aumento.py  calibrar.py  caracteristicas.py  comparar_modelos.py  convertir_keypoints.py  entrenar.py  entrenar_abecedario.py  entrenar_baseline.py  evaluar.py  exportar_litert.py  extraer_abecedario.py  extraer_asl.py  extraer_lsa64.py  informe_html.py  modelos.py  preentrenar.py  preparar_datos.py  preparar_preentrenamiento.py  seleccionar_vocabulario.py  servidor.py
web/: abecedario.json  abecedario.tflite  app.html  app.js  index.html  modelo.js  modelo.tflite  preprocesado.js  vocabulario.json
