[project]
name = "proyecto"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "jupyterlab>=4.6.1",
    "matplotlib>=3.11.0",
    "mediapipe==0.10.14",
    "mlflow>=3.14.0",
    "numpy>=1.26,<2.1",
    "pandas>=2.2,<3",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.16",
]
